--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Setup:
- * gem install rails -v 2.1 or rake rails:freeze:edge TAG=rel_2_1
+ * gem install rails -v 2.2.2 or rake rails:freeze:edge TAG=rel_2_2_2
  * gem install sqlite3-ruby (for test with sqlite3, if necessary)
  * install ImageMagick
  * git clone wefootball.git
